# model-gateway

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/models/: request.py  response.py
app/services/: dummy_models.py  model_service.py
app/utils/: timestamp.py
data/: dummy_features.json
tests/: conftest.py  test_coverage.py  test_health.py  test_main.py  test_models.py  test_predictions.py  test_services.py  test_validation.py
tests/fixtures/: dummy_data.py
